src/snapshots/droid_tui__regression__visual_joined_boxes_kinds_snapshot@joined_boxes_kinds_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                            DROID: led_pairs_kinds                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐
◉ ◉…
0%0%
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 130 │
└──────────────────────────────────────────────────────────────────────────────┘
