src/snapshots/droid_tui__regression__visual_joined_boxes_kinds_snapshot@joined_boxes_kinds_terminal_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                            DROID: led_pairs_kinds                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Pot ─────────────────────────────────────────────────────────────────────────┐
│┌ ◉ Pot P1.1 ──┐┌ ◉ Encoder E1…┐┌ □ Switch S1.1┐┌ ◉ Pot M1.1 ──┐              │
││     0% ○     ││     0% ○     ││     OFF ○    ││     0% ○     │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│┌ ◉ Pot P1.2 ──┐┌ ◉ Encoder E1…┐┌ □ Switch S1.2┐┌ ◉ Pot M1.2 ──┐              │
││     0% ○     ││     0% ○     ││     OFF ○    ││     0% ○     │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
└──────────────────────────────────────────────────────────────────────────────┘


























┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 130 │
└──────────────────────────────────────────────────────────────────────────────┘
