src/snapshots/droid_tui__regression__visual_melody2_narrow_boxed_snapshot@melody2_narrow_17.snap
---
source: src/regression.rs
expression: ansi
---
┌───────────────┐
│ DROID: droid_m│
└───────────────┘
┌ P2B8 ─────────┐
│ ○ Button B1.3 │
│  ○ LED L1.7   │
└───────────────┘
┌ CV I/O ───────┐
│← [t2 P] Modul…│
│ → [RST] Scale │
└───────────────┘
┌ Controller 6 ─┐
│ □ [GLBL Mute] │
│ □ Switch S6.7 │
└───────────────┘
┌ Encoder ──────┐
│ ○ Button B4.3 │
│◉ Encoder E4.3 │
└───────────────┘
┌ Controller 3 ─┐
│○ [swing] Menu…│
│○ [CHRO] Disab…│
└───────────────┘
┌ Pot ──────────┐
│○ [3RD/SPREAD]…│
│○ [13TH/GATES]…│
└───────────────┘
┌───────────────┐
│No patch loaded│
└───────────────┘
