src/snapshots/droid_tui__regression__visual_melody2_narrow_boxed_snapshot@melody2_narrow_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│       DROID: droid_mpfs5melody2      │
└──────────────────────────────────────┘
┌─────────┐┌────────┐┌──────┐┌───┐┌──┐┌┐
│ M4 1    ││ M4 2   ││○B○○ ○ │ E4…◉ ◉…□│
▮  ▮ ▮  ▮ │▮  ▮ ▮  ▮││○ ○…○○││   │0%0%O…
…  … …  … │…  … …  …││      ││   ││  │││
│         ││        ││○ ○○ ○││   ││  │││
│         ││        ││○ ○…○○││   ││  │││
│         ││        ││      ││   ││  │││
│         ││        ││      ││   ││  │││
│         ││        ││○ ○○ ○││   ││  │││
│         ││        ││○ ○…○○││   ││  │││
│         ││        ││      ││   ││  │□│
│         ││        ││      ││   │○○○│…│
│         ││        ││○ ○○ ○││   │… …│││
│         ││        ││○ ○…○○│○○◉◉││  │││
│         ││        ││      │…○○○○│  │□│
│         ││        ││      ││   │○ ○│…│
│         ││        ││○ ○○ ○││   │…○○│││
│         ││        ││○ ○…○○││   ││  │││
│         ││        ││      ││   ││  │││
│         ││        ││      ││   ││  │□│
│         ││        ││○ ○○ ○││   │○○○│…│
│         ││        ││○ ○…○○││   │… …│││
│         ││        ││      ││   ││  │││
○──○─○──○─┘○──○─○──○┘└──────┘└───┘└──┘□┘
┌──────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | │
└──────────────────────────────────────┘
