src/snapshots/droid_tui__regression__visual_melody2_narrow_boxed_snapshot@melody2_p2b8_uniform_60.snap
---
source: src/regression.rs
expression: buffer_to_ansi(&buf)
---
┌──────────────────────────────────────────────────────────┐
│                 DROID: droid_mpfs5melody2                │
└──────────────────────────────────────────────────────────┘
┌─────────┐┌────────┐┌──────┐┌───┐┌──┐┌──┐┌────┐
│ M4 1    ││ M4 2   ││○B○○ ○ │ E4…◉ ◉…□ □…  CV …
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○…○○││   │0%0%O…O…│    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○○ ○││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○…○○││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○○ ○││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○…○○││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   ││  │□ □││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   │○○○│… …││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○○ ○││   │… …││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○…○○│○○◉◉││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      │…○○○○│  │□ □││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   │○ ○│… …│◀  ▶▶│
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○○ ○││   │…○○││  │…  ……│
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○…○○││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   ││  ││  ││    │
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││      ││   ││  │□ □│◀  ▶▶│
▯  ▯ ▯  ▯ │▯  ▯ ▯  ▯││○ ○○ ○││   │○○○│… …│…  ……│
│         ││        ││○ ○…○○││   │… …││  ││    │
│         ││        ││      ││   ││  ││  ││    │
○  ○ ○  ○ │○  ○ ○  ○││      ││   ││  │□ □││  ▶▶│
O… O…O… O…│O… O…O… O…│○ ○○ ○││   │○ ○│… …││  ……│
│         ││        ││○ ○…○○││   │…○○││  ││    │
│         ││        ││      ││   ││  ││  ││    │
│         ││        ││○ ○○ ○││   ││  ││  ││  ▶▶│
│         ││        ││○ ○…○○││   ││  ││  ││  ……│
│         ││        ││      ││   ││  ││  ││    │
○  ○ ○  ○ │○  ○ ○  ○││      ││   ││  ││  ││    │
│         ││        ││      ││   ││  ││  ││    │
│         ││        ││      ││   ││  ││  ││    │
│         ││        ││      ││   ││  ││  ││    │
│         ││        ││      ││   ││  ││  ││    │
└─────────┘└────────┘└──────┘└───┘└──┘└──┘└────┘












































































































┌──────────────────────────────────────────────────────────┐
│Loaded droid_mpfs5melody2 | Renders degraded at 60 cols — │
└──────────────────────────────────────────────────────────┘
