src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_arpeggio1_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────┐
│┌ ○ [DIR] Dire…┐┌ ○ [PNG] Enab…┐┌ ○ [FLY] Swit…┐┌ ○ [OCT] Set …┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│┌ ○ [DRP] When…┐┌ ○ [STA] Enfo…┐┌ ○ [TRI] Swit…┐┌ ○ [MIN] Swit…┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│◉ [SPE] Speed o…◉ [PAT] Arpeggi…                                              │
│       0%              0%                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│← [ENV] envelope→ [CLK] optiona…← [CLK] interna…← [V/O] pitch (…              │
│     CV OUT           CV IN          CV OUT          CV OUT                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘


















┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | MOD B1.1 → 1 cells / 1 cables | Renders │
└──────────────────────────────────────────────────────────────────────────────┘
