src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_arpeggio1_terminal_80.snap
---
source: src/regression.rs
assertion_line: 2656
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────┐
│┌ ○ [DIR] Direc┐┌ ○ [PNG] Enabl┐┌ ○ [FLY] Switc┐┌ ○ [OCT] Set o┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│┌ ○ [DRP] When ┐┌ ○ [STA] Enfor┐┌ ○ [TRI] Switc┐┌ ○ [MIN] Switc┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│◉ [SPE] Speed of◉ [PAT] Arpeggio                                              │
│       0%              0%                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│← [ENV] envelope→ [CLK] optional← [CLK] internal← [V/O] pitch (V              │
│     CV OUT           CV IN          CV OUT          CV OUT                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘


















┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | MOD B1.1 → 1 cells / 1 cables | Scale: 1│
└──────────────────────────────────────────────────────────────────────────────┘
