src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_cable_banner_combos_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              DROID: cable_banner_combos                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
│ C…  CV …
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││  ▶ ││
│  ││  … ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
└──┘└────┘┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | MOD B1.1 → 2 cells / 2 cables | Scale: 1.0 | Orientation: Portrait                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
